# gps_cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  gpsTest.cpp
PPEcdf/: CMakeLists.txt  PPEcdf.cpp
R/: bivariate_ecdf.R  fit_gevd_and_compute_pvalue.R
StOptCDF/: CMakeLists.txt  fastCDFOnSample.cpp  nDDominanceAlone.cpp
apps/: CMakeLists.txt  computeGpsCLI.cpp  computeGpsForPidUkbbTraitPairsCLI.cpp  computeGpsForTraitPairCLI.cpp  computeGpsForUkbbTraitPairsCLI.cpp  computeGpsNoPerturbCLI.cpp  fitAndEvaluateEcdfsCLI.cpp  gpsTest.cpp  lwEcdfFault.cpp  lwIssue.cpp  permuteGpsCLI.cpp  permuteProblem.cpp  permuteTraitsCLI.cpp  permuteUkbbTraitsCLI.cpp  perturbPvalues.cpp  printCdfs.cpp  rgpsCLI.cpp  testIdxSort.cpp  testOrbTree.cpp  testPPEcdfCLI.cpp  writeFreqMapCLI.cpp  writeMeanStatComponentsCLI.cpp
include/: gpsConfig.h.in
include/PPEcdf/: PPEcdf.hpp
include/gps/: gps.hpp
src/: CMakeLists.txt  gps.cpp  gpsTest.cpp
test/: CMakeLists.txt  testGps.cpp  testPPEcdf.cpp  testStOpt.cpp
test/StOptCDF/: testFastCDF.cpp  testFastCDFOnSample.cpp
test/data/: 1002_unif_with_duplicates.csv  1e3_unif.csv  1e3_unif_ecdf.csv
